# ifabquantum

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  qutip-env.yml  requirements.txt  send_marconi.sh
data/processed/: Analyze.py
notebooks/: Beta_statistics.py  Different_betas - Copia.py  Different_betas.py  Different_betas_basic.py  Hamiltonian_Monte_Carlo.ipynb  MaxClique.nb  QAOA - MaxClique - FD.ipynb  QAOA-Bayes.ipynb  QAOA-ET-Bayes.ipynb
notes/: qiskit.tex
notes/Bayesian Optimization/: Bayesian Optimization Examples.ipynb  Bayesian_optimization.aux  Bayesian_optimization.tex  Learning_qubit.ipynb  QAOA - Bayes.ipynb
output/: visualize_training_angles.py  visualize_training_multiple.py
output/slow_measurements/: noise_kernels.npy
ppt/: 070921_QMLX.pptx
py/: main.py  main_load_graph.py
py/utils/: GD.py  QAOA-ET-Bayes.py  default_params.py  gaussian_proc.py  generate_graphs.py  generate_plot_single_graph.py  generate_plots.py  graph.py  qaoa.py
src/: BayesForPulser.py  main_github.py  main_multiple_bayes.py  main_other_opt.py  main_pulser.py  main_qiskit.py  main_qiskit_parallel.py  main_qiskit_recursive.py  main_qiskit_restarts.py  main_qutip.py  main_qutip_H2.py  main_qutip_corr_lengths.py  main_qutip_mcmc.py  main_qutip_noise.py  main_qutip_parallel.py  main_qutip_parallel_copy.py  main_qutip_slow_measurements.py  main_single_sequence.py  prova_tens.py  utils.py
src/utils/: HMC.py  _differentialevolution.py  create_graphs.py  data_analysis.py  default_params.py  gaussian_process.py  grad_descent.py  parameters.py  qaoa_qutip.py  (+5 more)
(+83 files in other folders)
