[tool.poetry]
name = "qaoa-pipeline"
version = "0.1.0"
description = "hybrid pipeline for qaoa"
authors = ["Simone <simone.tibaldi2@unibo.it>", "Davide <davide.vodola@unibo.it>", "Edoardo <edoardo.tignone@leitha.eu>", "Elisa <elisa.ercolessi@unibo.it>"]

[tool.poetry.dependencies]
python = "3.7.11"
numpy = "1.21.3"
pandas = "1.3.4"
scipy = "1.7.1"
scikit-learn = "1.0.1"
tqdm = "4.62.3"
networkx = "2.5"
python-igraph = "0.9.8"
matplotlib = "3.4.3"
qutip = "4.6.2"


[tool.poetry.scripts]
main = "src.main_qutip:main"

[build-system]
requires = ["poetry=1.1.4"]
build-backend = "poetry.masonry.api"